--- a/src/app/wallet-add-deduct-approval/wallet-add-deduct-approval.component.html
+++ b/src/app/wallet-add-deduct-approval/wallet-add-deduct-approval.component.html
@@ -2,7 +2,7 @@
     <app-header-control></app-header-control>
   <div class="card">
     <div class="card-header">
-      <a class="navbar-brand fa fa-home" style="font-size:48px;color: black;" [routerLink]="['/dashboard']"></a>
+      <!-- <a class="navbar-brand fa fa-home" style="font-size:48px;color: black;" [routerLink]="['/dashboard']"></a> -->
       <span>Wallet Add Approval</span>
     </div>
     <div class="card-body">
