--- a/src/app/wallet-withdrawal-approval/wallet-withdrawal-approval.component.html
+++ b/src/app/wallet-withdrawal-approval/wallet-withdrawal-approval.component.html
@@ -4,7 +4,7 @@
 
   <div class="card">
     <div class="card-header">
-      <a class="navbar-brand fa fa-home" style="font-size:48px;color: black;" [routerLink]="['/dashboard']"></a>
+      <!-- <a class="navbar-brand fa fa-home" style="font-size:48px;color: black;" [routerLink]="['/dashboard']"></a> -->
       <span>Wallet Withdrawal Approval</span>
     </div>
     <div class="card-body">
