--- a/src/app/rank-achiever-list/rank-achiever-list.component.css
+++ b/src/app/rank-achiever-list/rank-achiever-list.component.css
@@ -38,3 +38,8 @@ display:none;
 .mobileshow { 
 display:block; }
 }
+
+span {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+}
