--- a/src/app/reactivate-token/reactivate-token.component.html
+++ b/src/app/reactivate-token/reactivate-token.component.html
@@ -1,42 +1,16 @@
 <div class="w3-row marque-position">
-    <div class="row">
-        <div class="col-6">
-            <a href="#" class="w3-bar-item w3-button logo-position" routerLink="/dashboard"><img
-                    src="assets/logo/Logo.png" class="logo" style="width: 160px;height: 90px;" alt="Avatar"></a>
-        </div>
-        <div class="col-6">
-            <div class="w3-card w3-round w3-white w3-center animated flipInX mb-4 api-balance-position">
-                <!-- Logout -->
-                <a class="w3-bar-item w3-button  w3-right w3-hover-white font-large w3-theme-d2 position mobileshow"
-                    title="Logout" (click)="logout()"><i class="fa fa-sign-out pointer"></i></a>
-                <a class="float-right header-item pointer font-large header-item font-size-20" title="Logout"
-                    (click)="logout()"><i class="fa fa-sign-out"> Logout</i></a>
-            </div>
-            <div class="address float-right">
-                <table>
-                    <tr>
-                        <td>Customer Support :</td>
-                        <td>+91-8100101025(10am to 7pm)</td>
-                    </tr>
-                    <tr>
-                        <td>Support E-mail :</td>
-                        <td>support@telecharge.biz(24x7)</td>
-                    </tr>
-                </table>
-            </div>
-        </div>
-    </div>
-
+    
+    <app-header-control></app-header-control>
 
 
     <div class="card">
         <div class="card-header">
-            <a class="navbar-brand fa fa-home" style="font-size:48px;color: black;" [routerLink]="['/dashboard']"></a>
+            <!-- <a class="navbar-brand fa fa-home" style="font-size:48px;color: black;" [routerLink]="['/dashboard']"></a> -->
             <span>Unused Token Information</span>
         </div>
         <div class="card-body">
-            <div class="d-flex flex-row-reverse pb-2">
-                <input #searchToken type="text" placeholder="Search token" [(ngModel)]="token" />
+            <div class="col-md-3 d-flex flex-row-reverse pb-2">
+                <input class="form-control" #searchToken type="text" placeholder="Search token" [(ngModel)]="token" />
             </div>
 
             <table class="table table-hover table-striped table-bordered">
@@ -66,7 +40,7 @@
                     <tbody>
                         <tr>
                             <td colspan="4">
-                                <span>No records to display.</span>
+                                <span class="text-danger">No records to display.</span>
                             </td>
                         </tr>
                     </tbody>
